--- a/verilog/cpu15/exec.v.org
+++ b/verilog/cpu15/exec.v.org
@@ -12,8 +12,8 @@ module exec(
 	output REG_WEN,
 	output RAM_WEN
 );
+	reg[7:0] pc = 0;
 	reg cmp_flag = 0;
-	reg[7:0] P_COUNT = 0;
 	reg[15:0] REG_IN;
 	reg[15:0] RAM_IN;
 	reg REG_WEN;
@@ -21,82 +21,82 @@ module exec(
 
 	always @(posedge CLK_EX) begin
 		if (RESET_N == 0) begin
-			P_COUNT <= 0;
+			pc <= 0;
 			cmp_flag <= 0;
 		end
 		else begin
 			case (OP_CODE)
-				4'b0000: // MOV
+				0000: // MOV
 				begin
 					REG_IN <= REG_B;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0001: // ADD
+				0001: // ADD
 				begin
 					REG_IN <= REG_A + REG_B;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0010: // SUB
+				0010: // SUB
 				begin
 					REG_IN <= REG_A - REG_B;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0011: // AND
+				0011: // AND
 				begin
 					REG_IN <= REG_A & REG_B;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0100: // OR
+				0100: // OR
 				begin
 					REG_IN <= REG_A | REG_B;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0101: // SL
+				0101: // SL
 				begin
 					REG_IN <= {REG_A[14:0], 1'b0};
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0110: // SR
+				0110: // SR
 				begin
 					REG_IN <= {1'b0, REG_A[15:1]};
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b0111: // SRA
+				0111: // SRA
 				begin
 					REG_IN <= {REG_A[15], REG_A[15:1]};
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1000: // LDL
+				1000: // LDL
 				begin
 					REG_IN <= {REG_A[15:8], OP_DATA};
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1001: // LDH
+				1001: // LDH
 				begin
 					REG_IN <= {OP_DATA, REG_A[7:0]};
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1010: // CMP
+				1010: // CMP
 				begin
 					if (REG_A == REG_B) begin
 						cmp_flag <= 1;
@@ -106,40 +106,40 @@ module exec(
 					end
 					REG_WEN <= 0;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1011: // JE
+				1011: // JE
 				begin
 					if (cmp_flag == 1) begin
-						P_COUNT <= OP_DATA;
+						pc <= OP_DATA;
 					end
 					else begin
-						P_COUNT <= P_COUNT + 1;
+						pc <= pc + 1;
 					end
 					REG_WEN <= 0;
 					RAM_WEN <= 0;
 				end
-				4'b1100: // JMP
+				1100: // JMP
 				begin
 					REG_WEN <= 0;
 					RAM_WEN <= 0;
-					P_COUNT <= OP_DATA;
+					pc <= OP_DATA;
 				end
-				4'b1101: // LD
+				1101: // LD
 				begin
 					REG_IN <= RAM_OUT;
 					REG_WEN <= 1;
 					RAM_WEN <= 0;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1110: // ST
+				1110: // ST
 				begin
 					RAM_IN <= REG_A;
 					REG_WEN <= 0;
 					RAM_WEN <= 1;
-					P_COUNT <= P_COUNT + 1;
+					pc <= pc + 1;
 				end
-				4'b1111: // HLT
+				1111: // HLT
 				begin
 					REG_WEN <= 0;
 					RAM_WEN <= 0;
@@ -148,4 +148,8 @@ module exec(
 			endcase
 		end
 	end
+
+	assign P_COUNT = pc;
 endmodule
+
+
